--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -2,7 +2,7 @@ name: CICD
 
 on:
   push:
-    branches: [feat/planets]
+    branches: [main]
 
 jobs:
   build_and_deploy:
@@ -33,7 +33,6 @@ jobs:
           chmod 600 server_config.json
       - name: Deploy
         run: |
-          cd galavisor-api
-          scp -r -o StrictHostKeyChecking=no -i "~/.ssh/id_rsa" bin/Release/net9.0/linux-x64/publish ec2-user@ec2-54-75-118-89.eu-west-1.compute.amazonaws.com:~/
+          scp -r -o StrictHostKeyChecking=no -i "~/.ssh/id_rsa" galavisor-api/bin/Release/net9.0/linux-x64/publish ec2-user@ec2-54-75-118-89.eu-west-1.compute.amazonaws.com:~/
     env:
       SSH_PRIVATE_KEY: ${{secrets.SSH_PRIVATE_KEY}}
