--- a/galavisor-api/Properties/launchSettings.json
+++ b/galavisor-api/Properties/launchSettings.json
@@ -5,16 +5,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": false,
-      "applicationUrl": "http://localhost:5228",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
-    "https": {
-      "commandName": "Project",
-      "dotnetRunMessages": true,
-      "launchBrowser": false,
-      "applicationUrl": "https://localhost:7117;http://localhost:5228",
+      "applicationUrl": "http://ec2-54-75-118-89.eu-west-1.compute.amazonaws.com:8080",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
