--- a/galavisor-api/Properties/launchSettings.json
+++ b/galavisor-api/Properties/launchSettings.json
@@ -5,7 +5,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": false,
-      "applicationUrl": "http://ec2-54-75-118-89.eu-west-1.compute.amazonaws.com:8080",
+      "applicationUrl": "http://ec2-54-75-118-89.eu-west-1.compute.amazonaws.com",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
